Gramatica/driver_beta/gen/DemiseParser.py
# Generated from Demise.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class DemiseParser ( Parser ):

    grammarFileName = "Demise.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'sprite'", "<INVALID>", "'filter'", "'npc'", 
                     "'music'", "'map'", "'lightning'", "'UI'", "'weapon'", 
                     "'floorcasting_test'", "'raycasting_test'", "'raycasting_maze_test'", 
                     "'reflexing_floor'", "'->'", "'('", "')'", "'['", "']'", 
                     "','", "';'" ]

    symbolicNames = [ "<INVALID>", "SPRITE", "SPRITE_TYPE", "FILTER", "NPC", 
                      "MUSIC", "MAP", "LIGHTNING", "UI", "WEAPON", "FLOORCASTING_TEST", 
                      "RAYCASTING_TEST", "RAYCASTING_MAZE_TEST", "REFLEXING_FLOOR", 
                      "ARROW", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", 
                      "COMMA", "SEMICOLON", "INTEGER", "STRING_LITERAL", 
                      "IDENTIFIER", "COMENTARIO", "ESPACIO", "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_spriteDeclaration = 2
    RULE_filter = 3
    RULE_npcDeclaration = 4
    RULE_musicDeclaration = 5
    RULE_mapDeclaration = 6
    RULE_mapRow = 7
    RULE_lightningDeclaration = 8
    RULE_uiDeclaration = 9
    RULE_npcPositioning = 10
    RULE_weaponDeclaration = 11
    RULE_weaponLogic = 12
    RULE_testCommand = 13

    ruleNames =  [ "program", "statement", "spriteDeclaration", "filter", 
                   "npcDeclaration", "musicDeclaration", "mapDeclaration", 
                   "mapRow", "lightningDeclaration", "uiDeclaration", "npcPositioning", 
                   "weaponDeclaration", "weaponLogic", "testCommand" ]

    EOF = Token.EOF
    SPRITE=1
    SPRITE_TYPE=2
    FILTER=3
    NPC=4
    MUSIC=5
    MAP=6
    LIGHTNING=7
    UI=8
    WEAPON=9
    FLOORCASTING_TEST=10
    RAYCASTING_TEST=11
    RAYCASTING_MAZE_TEST=12
    REFLEXING_FLOOR=13
    ARROW=14
    LPAREN=15
    RPAREN=16
    LBRACKET=17
    RBRACKET=18
    COMMA=19
    SEMICOLON=20
    INTEGER=21
    STRING_LITERAL=22
    IDENTIFIER=23
    COMENTARIO=24
    ESPACIO=25
    WS=26

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(DemiseParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DemiseParser.StatementContext)
            else:
                return self.getTypedRuleContext(DemiseParser.StatementContext,i)


        def getRuleIndex(self):
            return DemiseParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = DemiseParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 58736634) != 0):
                self.state = 28
                self.statement()
                self.state = 33
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 34
            self.match(DemiseParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def spriteDeclaration(self):
            return self.getTypedRuleContext(DemiseParser.SpriteDeclarationContext,0)


        def mapDeclaration(self):
            return self.getTypedRuleContext(DemiseParser.MapDeclarationContext,0)


        def npcDeclaration(self):
            return self.getTypedRuleContext(DemiseParser.NpcDeclarationContext,0)


        def npcPositioning(self):
            return self.getTypedRuleContext(DemiseParser.NpcPositioningContext,0)


        def musicDeclaration(self):
            return self.getTypedRuleContext(DemiseParser.MusicDeclarationContext,0)


        def weaponDeclaration(self):
            return self.getTypedRuleContext(DemiseParser.WeaponDeclarationContext,0)


        def weaponLogic(self):
            return self.getTypedRuleContext(DemiseParser.WeaponLogicContext,0)


        def filter_(self):
            return self.getTypedRuleContext(DemiseParser.FilterContext,0)


        def uiDeclaration(self):
            return self.getTypedRuleContext(DemiseParser.UiDeclarationContext,0)


        def lightningDeclaration(self):
            return self.getTypedRuleContext(DemiseParser.LightningDeclarationContext,0)


        def testCommand(self):
            return self.getTypedRuleContext(DemiseParser.TestCommandContext,0)


        def COMENTARIO(self):
            return self.getToken(DemiseParser.COMENTARIO, 0)

        def ESPACIO(self):
            return self.getToken(DemiseParser.ESPACIO, 0)

        def getRuleIndex(self):
            return DemiseParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = DemiseParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 49
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 36
                self.spriteDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 37
                self.mapDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 38
                self.npcDeclaration()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 39
                self.npcPositioning()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 40
                self.musicDeclaration()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 41
                self.weaponDeclaration()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 42
                self.weaponLogic()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 43
                self.filter_()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 44
                self.uiDeclaration()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 45
                self.lightningDeclaration()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 46
                self.testCommand()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 47
                self.match(DemiseParser.COMENTARIO)
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 48
                self.match(DemiseParser.ESPACIO)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SpriteDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SPRITE(self):
            return self.getToken(DemiseParser.SPRITE, 0)

        def SPRITE_TYPE(self):
            return self.getToken(DemiseParser.SPRITE_TYPE, 0)

        def ARROW(self):
            return self.getToken(DemiseParser.ARROW, 0)

        def STRING_LITERAL(self):
            return self.getToken(DemiseParser.STRING_LITERAL, 0)

        def getRuleIndex(self):
            return DemiseParser.RULE_spriteDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpriteDeclaration" ):
                listener.enterSpriteDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpriteDeclaration" ):
                listener.exitSpriteDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSpriteDeclaration" ):
                return visitor.visitSpriteDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def spriteDeclaration(self):

        localctx = DemiseParser.SpriteDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_spriteDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(DemiseParser.SPRITE)
            self.state = 52
            self.match(DemiseParser.SPRITE_TYPE)
            self.state = 53
            self.match(DemiseParser.ARROW)
            self.state = 54
            self.match(DemiseParser.STRING_LITERAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FilterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FILTER(self):
            return self.getToken(DemiseParser.FILTER, 0)

        def LPAREN(self):
            return self.getToken(DemiseParser.LPAREN, 0)

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(DemiseParser.IDENTIFIER)
            else:
                return self.getToken(DemiseParser.IDENTIFIER, i)

        def COMMA(self):
            return self.getToken(DemiseParser.COMMA, 0)

        def RPAREN(self):
            return self.getToken(DemiseParser.RPAREN, 0)

        def getRuleIndex(self):
            return DemiseParser.RULE_filter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFilter" ):
                listener.enterFilter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFilter" ):
                listener.exitFilter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFilter" ):
                return visitor.visitFilter(self)
            else:
                return visitor.visitChildren(self)




    def filter_(self):

        localctx = DemiseParser.FilterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_filter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(DemiseParser.FILTER)
            self.state = 57
            self.match(DemiseParser.LPAREN)
            self.state = 58
            self.match(DemiseParser.IDENTIFIER)
            self.state = 59
            self.match(DemiseParser.COMMA)
            self.state = 60
            self.match(DemiseParser.IDENTIFIER)
            self.state = 61
            self.match(DemiseParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NpcDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NPC(self):
            return self.getToken(DemiseParser.NPC, 0)

        def IDENTIFIER(self):
            return self.getToken(DemiseParser.IDENTIFIER, 0)

        def ARROW(self):
            return self.getToken(DemiseParser.ARROW, 0)

        def STRING_LITERAL(self):
            return self.getToken(DemiseParser.STRING_LITERAL, 0)

        def getRuleIndex(self):
            return DemiseParser.RULE_npcDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNpcDeclaration" ):
                listener.enterNpcDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNpcDeclaration" ):
                listener.exitNpcDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNpcDeclaration" ):
                return visitor.visitNpcDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def npcDeclaration(self):

        localctx = DemiseParser.NpcDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_npcDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(DemiseParser.NPC)
            self.state = 64
            self.match(DemiseParser.IDENTIFIER)
            self.state = 65
            self.match(DemiseParser.ARROW)
            self.state = 66
            self.match(DemiseParser.STRING_LITERAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MusicDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MUSIC(self):
            return self.getToken(DemiseParser.MUSIC, 0)

        def ARROW(self):
            return self.getToken(DemiseParser.ARROW, 0)

        def STRING_LITERAL(self):
            return self.getToken(DemiseParser.STRING_LITERAL, 0)

        def getRuleIndex(self):
            return DemiseParser.RULE_musicDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMusicDeclaration" ):
                listener.enterMusicDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMusicDeclaration" ):
                listener.exitMusicDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMusicDeclaration" ):
                return visitor.visitMusicDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def musicDeclaration(self):

        localctx = DemiseParser.MusicDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_musicDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(DemiseParser.MUSIC)
            self.state = 69
            self.match(DemiseParser.ARROW)
            self.state = 70
            self.match(DemiseParser.STRING_LITERAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MapDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MAP(self):
            return self.getToken(DemiseParser.MAP, 0)

        def ARROW(self):
            return self.getToken(DemiseParser.ARROW, 0)

        def SEMICOLON(self):
            return self.getToken(DemiseParser.SEMICOLON, 0)

        def mapRow(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DemiseParser.MapRowContext)
            else:
                return self.getTypedRuleContext(DemiseParser.MapRowContext,i)


        def getRuleIndex(self):
            return DemiseParser.RULE_mapDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMapDeclaration" ):
                listener.enterMapDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMapDeclaration" ):
                listener.exitMapDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMapDeclaration" ):
                return visitor.visitMapDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def mapDeclaration(self):

        localctx = DemiseParser.MapDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_mapDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(DemiseParser.MAP)
            self.state = 73
            self.match(DemiseParser.ARROW)
            self.state = 75 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 74
                self.mapRow()
                self.state = 77 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==17):
                    break

            self.state = 79
            self.match(DemiseParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MapRowContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACKET(self):
            return self.getToken(DemiseParser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(DemiseParser.RBRACKET, 0)

        def INTEGER(self, i:int=None):
            if i is None:
                return self.getTokens(DemiseParser.INTEGER)
            else:
                return self.getToken(DemiseParser.INTEGER, i)

        def getRuleIndex(self):
            return DemiseParser.RULE_mapRow

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMapRow" ):
                listener.enterMapRow(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMapRow" ):
                listener.exitMapRow(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMapRow" ):
                return visitor.visitMapRow(self)
            else:
                return visitor.visitChildren(self)




    def mapRow(self):

        localctx = DemiseParser.MapRowContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_mapRow)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(DemiseParser.LBRACKET)
            self.state = 83 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 82
                self.match(DemiseParser.INTEGER)
                self.state = 85 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==21):
                    break

            self.state = 87
            self.match(DemiseParser.RBRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LightningDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LIGHTNING(self):
            return self.getToken(DemiseParser.LIGHTNING, 0)

        def ARROW(self):
            return self.getToken(DemiseParser.ARROW, 0)

        def INTEGER(self):
            return self.getToken(DemiseParser.INTEGER, 0)

        def getRuleIndex(self):
            return DemiseParser.RULE_lightningDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLightningDeclaration" ):
                listener.enterLightningDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLightningDeclaration" ):
                listener.exitLightningDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLightningDeclaration" ):
                return visitor.visitLightningDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def lightningDeclaration(self):

        localctx = DemiseParser.LightningDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_lightningDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(DemiseParser.LIGHTNING)
            self.state = 90
            self.match(DemiseParser.ARROW)
            self.state = 91
            self.match(DemiseParser.INTEGER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UiDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UI(self):
            return self.getToken(DemiseParser.UI, 0)

        def ARROW(self):
            return self.getToken(DemiseParser.ARROW, 0)

        def STRING_LITERAL(self):
            return self.getToken(DemiseParser.STRING_LITERAL, 0)

        def getRuleIndex(self):
            return DemiseParser.RULE_uiDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUiDeclaration" ):
                listener.enterUiDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUiDeclaration" ):
                listener.exitUiDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUiDeclaration" ):
                return visitor.visitUiDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def uiDeclaration(self):

        localctx = DemiseParser.UiDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_uiDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(DemiseParser.UI)
            self.state = 94
            self.match(DemiseParser.ARROW)
            self.state = 95
            self.match(DemiseParser.STRING_LITERAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NpcPositioningContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(DemiseParser.IDENTIFIER, 0)

        def ARROW(self):
            return self.getToken(DemiseParser.ARROW, 0)

        def LPAREN(self):
            return self.getToken(DemiseParser.LPAREN, 0)

        def INTEGER(self, i:int=None):
            if i is None:
                return self.getTokens(DemiseParser.INTEGER)
            else:
                return self.getToken(DemiseParser.INTEGER, i)

        def COMMA(self):
            return self.getToken(DemiseParser.COMMA, 0)

        def RPAREN(self):
            return self.getToken(DemiseParser.RPAREN, 0)

        def getRuleIndex(self):
            return DemiseParser.RULE_npcPositioning

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNpcPositioning" ):
                listener.enterNpcPositioning(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNpcPositioning" ):
                listener.exitNpcPositioning(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNpcPositioning" ):
                return visitor.visitNpcPositioning(self)
            else:
                return visitor.visitChildren(self)




    def npcPositioning(self):

        localctx = DemiseParser.NpcPositioningContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_npcPositioning)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(DemiseParser.IDENTIFIER)
            self.state = 98
            self.match(DemiseParser.ARROW)
            self.state = 99
            self.match(DemiseParser.LPAREN)
            self.state = 100
            self.match(DemiseParser.INTEGER)
            self.state = 101
            self.match(DemiseParser.COMMA)
            self.state = 102
            self.match(DemiseParser.INTEGER)
            self.state = 103
            self.match(DemiseParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WeaponDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WEAPON(self):
            return self.getToken(DemiseParser.WEAPON, 0)

        def IDENTIFIER(self):
            return self.getToken(DemiseParser.IDENTIFIER, 0)

        def ARROW(self):
            return self.getToken(DemiseParser.ARROW, 0)

        def STRING_LITERAL(self):
            return self.getToken(DemiseParser.STRING_LITERAL, 0)

        def getRuleIndex(self):
            return DemiseParser.RULE_weaponDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWeaponDeclaration" ):
                listener.enterWeaponDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWeaponDeclaration" ):
                listener.exitWeaponDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWeaponDeclaration" ):
                return visitor.visitWeaponDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def weaponDeclaration(self):

        localctx = DemiseParser.WeaponDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_weaponDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(DemiseParser.WEAPON)
            self.state = 106
            self.match(DemiseParser.IDENTIFIER)
            self.state = 107
            self.match(DemiseParser.ARROW)
            self.state = 108
            self.match(DemiseParser.STRING_LITERAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WeaponLogicContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(DemiseParser.IDENTIFIER)
            else:
                return self.getToken(DemiseParser.IDENTIFIER, i)

        def ARROW(self):
            return self.getToken(DemiseParser.ARROW, 0)

        def getRuleIndex(self):
            return DemiseParser.RULE_weaponLogic

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWeaponLogic" ):
                listener.enterWeaponLogic(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWeaponLogic" ):
                listener.exitWeaponLogic(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWeaponLogic" ):
                return visitor.visitWeaponLogic(self)
            else:
                return visitor.visitChildren(self)




    def weaponLogic(self):

        localctx = DemiseParser.WeaponLogicContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_weaponLogic)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(DemiseParser.IDENTIFIER)
            self.state = 111
            self.match(DemiseParser.ARROW)
            self.state = 112
            self.match(DemiseParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TestCommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FLOORCASTING_TEST(self):
            return self.getToken(DemiseParser.FLOORCASTING_TEST, 0)

        def RAYCASTING_TEST(self):
            return self.getToken(DemiseParser.RAYCASTING_TEST, 0)

        def RAYCASTING_MAZE_TEST(self):
            return self.getToken(DemiseParser.RAYCASTING_MAZE_TEST, 0)

        def REFLEXING_FLOOR(self):
            return self.getToken(DemiseParser.REFLEXING_FLOOR, 0)

        def getRuleIndex(self):
            return DemiseParser.RULE_testCommand
